add button to projects

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
                                         <div class="thumb-inner animate" data-animate="fadeInUp">
                                             <h4>Physics Simulator</h4>
                                             <p>Some words</p>
+                                            <a class="thumb-button">Learn More</a>
                                         </div>
                                     </div>
                                 </div>
