add some content regarding projects

--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
     </header>
 
     <div id="fullpage" class="fullpage-default">
-
         <div class="section animated-row" data-section="slide01">
             <div class="section-inner">
                 <div class="welcome-box">
@@ -74,32 +73,132 @@
                                         </div>
                                         <div class="thumb-inner animate" data-animate="fadeInUp">
                                             <h4>Physics Simulator</h4>
-                                            <p>Some words</p>
-                                            <a class="thumb-button">Learn More</a>
+                                            <p>2D Rigid Body Dynamics</p>
+                                            <a class="thumb-button" href="#slide03">Learn More</a>
                                         </div>
                                     </div>
                                 </div>
+
+                                <div class="item animate" data-animate="fadeInUp">
+                                    <div class="portfolio-item">
+                                        <div class="thumb">
+                                            <img src="images/item-2.jpg">
+                                        </div>
+                                        <div class="thumb-inner animate" data-animate="fadeInUp">
+                                            <h4>Box Clicker</h4>
+                                            <p>Game where you click boxes</p>
+                                            <a class="thumb-button" href="#slide04">Learn More</a>
+                                        </div>
+                                    </div>
+                                </div>
+
                                 <div class="item animate" data-animate="fadeInUp">
                                     <div class="portfolio-item">
                                         <div class="thumb">
                                             <img src="images/item-1.jpg">
                                         </div>
                                         <div class="thumb-inner animate" data-animate="fadeInUp">
-                                            <h4>Physics Simulator</h4>
-                                            <p>Some words</p>
+                                            <h4>A Little Tall Tale</h4>
+                                            <p>2D Rogue-like Dungeon Crawler</p>
+                                            <a class="thumb-button" href="#slide05">Learn More</a>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="item animate" data-animate="fadeInUp">
-                                    <div class="portfolio-item">
-                                        <div class="thumb">
-                                            <img src="images/item-1.jpg">
-                                        </div>
-                                        <div class="thumb-inner animate" data-animate="fadeInUp">
-                                            <h4>Physics Simulator</h4>
-                                            <p>Some words</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="section animated-row" data-section="slide03">
+            <div class="section-inner">
+                <div class="about-section">
+                    <div class="row justify-content-center">
+                        <div class="col-lg-8 wide-col-laptop">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="about-contentbox">
+                                        <div class="animate" data-animate="fadeInUp">
+                                            <span>Physics Simulator</span>
+                                            <div class="project-languages">
+                                                <span>Java</span>
+                                                <span>TeaVM</span>
+                                                <span>Spring Boot</span>
+                                            </div>
+                                            <h2>I've always liked physics, so I built this app in Java from scratch. In order to show it off, I first tried Vaadin Spring Boot and then TeaVM to convert this Java app to the Web.</h2>
+                                            <a href="https://github.com/Bairul/Physics-Sim/tree/teavm" class="github-link" target="_blank">
+                                                View on GitHub
+                                            </a>
                                         </div>
                                     </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <figure class="about-img animate" data-animate="fadeInUp"><img src="images/project-image.gif" class="rounded" alt=""></figure>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="section animated-row" data-section="slide04">
+            <div class="section-inner">
+                <div class="about-section">
+                    <div class="row justify-content-center">
+                        <div class="col-lg-8 wide-col-laptop">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="about-contentbox">
+                                        <div class="animate" data-animate="fadeInUp">
+                                            <span>Box Clicker</span>
+                                            <div class="project-languages">
+                                                <span>Js</span>
+                                                <span>Java</span>
+                                                <span>AWS Lambda</span>
+                                            </div>
+                                            <h2>This web game can help train your aim. To save player's data, I used an encryption method to prevent players from changing them in their record file. The encryption/decryption uses AWS Lambda functions. </h2>
+                                            <a href="https://github.com/Bairul/Box-Clicker" class="github-link" target="_blank">
+                                                View on GitHub
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <figure class="about-img animate" data-animate="fadeInUp"><img src="images/item-2.jpg" class="rounded" alt=""></figure>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="section animated-row" data-section="slide05">
+            <div class="section-inner">
+                <div class="about-section">
+                    <div class="row justify-content-center">
+                        <div class="col-lg-8 wide-col-laptop">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="about-contentbox">
+                                        <div class="animate" data-animate="fadeInUp">
+                                            <span>A Little Tall Tale</span>
+                                            <div class="project-languages">
+                                                <span>C#</span>
+                                                <span>Unity</span>
+                                                <span>Tiled</span>
+                                            </div>
+                                            <h2>A work in progress game where you climb the tower, meet spirits, defeat enemies, and collect powerups. </h2>
+                                            <a href="#" class="github-link" target="_blank">
+                                                View on GitHub
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <figure class="about-img animate" data-animate="fadeInUp"><img src="images/item-2.jpg" class="rounded" alt=""></figure>
                                 </div>
                             </div>
                         </div>
