--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                                 <div class="item animate" data-animate="fadeInUp">
                                     <div class="portfolio-item">
                                         <div class="thumb">
-                                            <img src="images/item-1.jpg">
+                                            <img src="images/item-3.jpg">
                                         </div>
                                         <div class="thumb-inner animate" data-animate="fadeInUp">
                                             <h4>A Little Tall Tale</h4>
@@ -166,7 +166,7 @@
                                     </div>
                                 </div>
                                 <div class="col-md-6">
-                                    <figure class="about-img animate" data-animate="fadeInUp"><img src="images/item-2.jpg" class="rounded" alt=""></figure>
+                                    <figure class="about-img animate" data-animate="fadeInUp"><img src="images/project-image-2.gif" class="rounded" alt=""></figure>
                                 </div>
                             </div>
                         </div>
@@ -190,15 +190,15 @@
                                                 <span>Unity</span>
                                                 <span>Tiled</span>
                                             </div>
-                                            <h2>A work in progress game where you climb the tower, meet spirits, defeat enemies, and collect powerups. </h2>
-                                            <a href="#" class="github-link" target="_blank">
+                                            <h2>A work-in-progress game where you climb a tower, meet spirits, defeat enemies, and collect powerups. </h2>
+                                            <a href="https://github.com/Bairul/Unity2DMashup" class="github-link" target="_blank">
                                                 View on GitHub
                                             </a>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
-                                    <figure class="about-img animate" data-animate="fadeInUp"><img src="images/item-2.jpg" class="rounded" alt=""></figure>
+                                    <figure class="about-img animate" data-animate="fadeInUp"><img src="images/project-image-3.gif" class="rounded" alt=""></figure>
                                 </div>
                             </div>
                         </div>
