clean some code in html and css

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <header id="header">
         <div class="container-fluid">
             <div class="navbar">
-                <a href="#" id="logo" title="Elegance by TemplateMo"></a>
+                <a href="#" id="logo" title="E"></a>
                 <div class="navigation-row">
                     <nav id="navigation">
                         <button type="button" class="navbar-toggle"> <i class="fa fa-bars"></i> </button>
@@ -208,7 +208,7 @@
         </div>
     </div>
 
-    <div id="social-icons">
+    <!-- <div id="social-icons">
         <div class="text-right">
             <ul class="social-icons">
                 <li><a href="#" title="Facebook"><i class="fa fa-facebook"></i></a></li>
@@ -217,7 +217,7 @@
                 <li><a href="#" title="Instagram"><i class="fa fa-behance"></i></a></li>
             </ul>
         </div>
-    </div>
+    </div> -->
 
     <script src="scripts/jquery.js"></script>
     <script src="scripts/bootstrap.min.js"></script>
